# netbox-turbobulk-public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  branching.md  client.md  index.md  quickstart.md  troubleshooting.md  user-guide.md
examples/: 01_hello_turbobulk.py  02_device_inventory.py  03_export_transform.py  04_interface_bulk.py  05_cable_connections.py  06_gpu_datacenter_cabling.py  07_post_hooks.py  08_branching_workflow.py  09_cached_exports.py  10_validation_best_practices.py  11_event_streams.py  12_format_comparison.py  README.md  requirements.txt  run_all_examples.py  verify.py
examples/common/: __init__.py  parquet_utils.py  topology.py
src/turbobulk_client/: __init__.py  client.py  exceptions.py
tests/: __init__.py  test_client.py
