[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbobulk-client"
version = "0.1.0"
description = "Python client for TurboBulk NetBox plugin - High-performance bulk data operations for NetBox"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "NetBox Labs", email = "support@netboxlabs.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["netbox", "bulk", "api", "dcim", "ipam", "parquet"]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=12.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/netboxlabs/netbox-turbobulk-public"
Documentation = "https://github.com/netboxlabs/netbox-turbobulk-public/tree/main/docs"
Repository = "https://github.com/netboxlabs/netbox-turbobulk-public"
Changelog = "https://github.com/netboxlabs/netbox-turbobulk-public/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
